--- a/project-3(teamwork)/index.html
+++ b/project-3(teamwork)/index.html
@@ -12,11 +12,42 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+     <!-- Modal -->
+    <div class="modal fade" id="walkerModal" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container-md">
       <h1 class="text-center mb-4">List of walkers</h1>
-      <div id="walker-list" class ="d-flex flex-row align-items-center flex-wrap"></div>
+      <div
+        id="walker-list"
+        class="d-flex flex-row align-items-center flex-wrap"
+      ></div>
     </div>
-    <script src="scripts/script.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
